initial JS strategies and HTML updates

--- a/questions.html
+++ b/questions.html
@@ -7,56 +7,22 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
-<body> 
+
+<body>
     <h1>QUESTIONS</h1>
+    <h2 id="timer"></h2>
 
-    <h2>Question 1</h2>
-    <h3>What special characters denote a string in JavaScript?</h3>
-    <ul>
-        <input type = "radio" name = "question 1"> ' '</br>
-        <input type = "radio" name = "question 1"> ||</br>
-        <input type = "radio" name = "question 1"> [ ]</br>
-        <input type = "radio" name = "question 1"> { }</br>
-        <input type = "radio" name = "question 1"> * *</br>
-    </ul>
 
-    <h2>Question 2</h2>
-    <h3>What special characters denote an array in JavaScript?</h3>
-    <ul>
-        <input type = "radio" name = "question 2"> ' '</br>
-        <input type = "radio" name = "question 2"> ||</br>
-        <input type = "radio" name = "question 2"> [ ]</br>
-        <input type = "radio" name = "question 2"> { }</br>
-        <input type = "radio" name = "question 2"> * *</br>
-    </ul>
+    <div id="question">
+        <ul>
+            <input type="radio"></br>
+            <input type="radio"></br>
+            <input type="radio"></br>
+            <input type="radio"></br>
+            <input type="radio"></br>
+        </ul>
+    </div>
 
-    <h2>Question 3</h2>
-    <h3>What special characters denote that two values are strictly equal in JavaScript?</h3>
-    <ul>
-        <input type = "radio" name = "question 3"> !==</br>
-        <input type = "radio" name = "question 3"> +==</br>
-        <input type = "radio" name = "question 3"> ===</br>
-        <input type = "radio" name = "question 3"> -==</br>
-        <input type = "radio" name = "question 3"> ==!</br>
-    </ul>
 
-    <h2>Question 4</h2>
-    <h3>Which of the following is not a type of loop in JavaScript?</h3>
-    <ul>
-        <input type = "radio" name = "question 4"> for</br>
-        <input type = "radio" name = "question 4"> integer</br>
-        <input type = "radio" name = "question 4"> while</br>
-        <input type = "radio" name = "question 4"> do... while</br>
-        <input type = "radio" name = "question 4"> nested</br>
-    </ul>
-
-    <h2>Question 5</h2>
-    <h3>What property would you use to remove the last element in an array in JavaScript?</h3>
-    <ul>
-        <input type = "radio" name = "question 5"> .slice()</br>
-        <input type = "radio" name = "question 5"> .unshift()</br>
-        <input type = "radio" name = "question 5"> .push()</br>
-        <input type = "radio" name = "question 5"> .length</br>
-        <input type = "radio" name = "question 5"> .pop()</br>
-    </ul>
+    <script src="assets/js/script.js"></script>
 </body>
