--- a/high-score.html
+++ b/high-score.html
@@ -14,4 +14,6 @@
     <div class="high-scores">
         <h3>High Scores:</h3>
     </div>
+
+    <script src="assets/js/script.js"></script>
 </body>
