function work and added objects

--- a/questions.html
+++ b/questions.html
@@ -13,67 +13,11 @@
     <h2 id="timer"></h2>
 
 
-    <!-- <div class="questions">
-        <div class="question-1">
-            <h2>What special characters denote an array in JavaScript?</h2>
-            <ul>
-                <input type="checkbox" id="answers" name="wrong" value=" ' ' "><label for="' '"> ' ' </label></br>
-                <input type="checkbox" id="answers" name="correct" value=" [ ] "><label for="[ ]"> [ ] </label></br>
-                <input type="checkbox" id="answers" name="wrong" value=" ( ) "><label for="( )"> ( )</label></br>
-                <input type="checkbox" id="answers" name="wrong" value=" * * "><label for="* *'"> * *</label></br>
-                <input type="checkbox" id="answers" name="wrong" value=" & & "><label for=" & &"> & &</label></br>
-            </ul>
+    <div class="questions">
+        <h2 class="ask-ques"></h2>
+        <div class="answer"></div>
         </div>
-
-        <div class="question-2">
-            <h2>What special characters denote that two values are strictly equal in JavaScript?</h2>
-            <ul>
-                <input type="checkbox" id="answers" name="wrong" value=" ' ' "><label for="' '"> ' ' </label></br>
-                <input type="checkbox" id="answers" name="wrong" value=" [ ] "><label for="[ ]"> [ ] </label></br>
-                <input type="checkbox" id="answers" name="wrong" value=" ( ) "><label for="( )"> ( )</label></br>
-                <input type="checkbox" id="answers" name="correct" value=" === "><label for=" === "> ===</label></br>
-                <input type="checkbox" id="answers" name="wrong" value=" & & "><label for=" & &"> & &</label></br>
-            </ul>
-        </div>
-
-        <div class="question-3">
-            <h2>Which of the following is <strong>not</strong> a type of loop in JavaScript?</h2>
-            <ul>
-                <input type="checkbox" id="answers" name="wrong" value="for"><label for="for"> for</label></br>
-                <input type="checkbox" id="answers" name="wrong" value="while"><label for="while"> while</label></br>
-                <input type="checkbox" id="answers" name="wrong" value="do...while"><label for="do...while"> do...while</label></br>
-                <input type="checkbox" id="answers" name="wrong" value="nested"><label for="nester"> nested</label></br>
-                <input type="checkbox" id="answers" name="correct" value="integer"><label for="integer"> integer</label></br>
-            </ul>
-        </div>
-
-        
-        <div class="question-4">
-            <h2>What special characters denote a string in JavaScript</h2>
-            <ul>
-                <input type="checkbox" id="answers" name="correct" value=" ' ' "><label for="' '"> ' ' </label></br>
-                <input type="checkbox" id="answers" name="wrong" value=" [ ] "><label for="[ ]"> [ ] </label></br>
-                <input type="checkbox" id="answers" name="wrong" value=" ( ) "><label for="( )"> ( )</label></br>
-                <input type="checkbox" id="answers" name="wrong" value=" * * "><label for="* *'"> * *</label></br>
-                <input type="checkbox" id="answers" name="wrong" value=" & & "><label for=" & &"> & &</label></br>
-            </ul>
-        </div>
-
-        <div class="question-5">
-            <h2>What property would you use to add to the beginning of a JavaScript array?</h2>
-            <ul>
-                <input type="checkbox" id="answers" name="wrong" value=" pop "><label for="pop"> pop() </label></br>
-                <input type="checkbox" id="answers" name="wrong" value="unshift"><label for="unshift"> unshift()</label></br>
-                <input type="checkbox" id="answers" name="wrong" value="length"><label for="length">.length</label></br>
-                <input type="checkbox" id="answers" name="correct" value="shift"><label for="shift"> shift()</label></br>
-                <input type="checkbox" id="answers" name="wrong" value="push"><label for="push">.push</label></br>
-            </ul>
-        </div>
-    </div> -->
-<div class="questions">
-    <h2 class="ask-ques"></h2>
-    <button></button>
-</div>
+    </div>
 
     <script src="assets/js/script.js"></script>
 </body>
