--- a/questions.html
+++ b/questions.html
@@ -9,15 +9,18 @@
 </head>
 
 <body>
-    <h1>QUESTIONS</h1>
+    <h1>JavaScript Quiz</h1>
+    <h2></h2>
     <h2 id="timer"></h2>
 
 
     <div class="questions">
-        <h2 class="ask-ques"></h2>
-        <div class="answer"></div>
+        <div id="quiz">
+            <h2 class="ask-ques"></h2>
+            <div class="answer"></div>
         </div>
     </div>
+<button onclick="startGame()">Click Here</button>
 
     <script src="assets/js/script.js"></script>
 </body>
