final version with css updates and js edits

--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
 
 <body>
     <h1>Welcome to the JavaScript Quiz!</h1>
-    <p> Hello, and welcome to the JavaScript Quiz! You will be asked a series of questions about JavaScript to test your knowledge.</p>
-    <ul>Some things to keep in mind:
-        <li>This quiz is timed</li>
-        <li>You will only be able to see the next question if you get your current question right</li>
-        <li>For every question you get wrong, 10 seconds will be taken off the clock</li>
-        <li>You will be able to track your score, and see what the all-time high scores are</li>
+    <p> Hello, and welcome to the JavaScript Quiz! You will be asked a series of questions about JavaScript to test your knowledge. This quiz is timed. For every question you get wrong, 10 seconds will be taken off the clock. To get started, click below.</p>
     </ul>
 
     <a href = 'questions.html' >click here to begin</a>
